2017-05-26  Bruno Haible  <bruno@clisp.org>

	Allow regular testing of memory management with limited memory size.
	* Makefile.devel (build-porting32-gcc-limited_memory,
	build-porting32-cc-limited_memory, build-porting64-gcc-limited_memory,
	build-porting64-cc-limited_memory): New targets.
	* modules/asdf/Makefile (asdf.fas): Give it more memory.

2017-05-26  Bruno Haible  <bruno@clisp.org>

	Allow regular testing of SPVW_PURE_PAGES memory management.
	* lispbibl.d: In SPVW_PAGES case with TYPECODES, test PREFER_PURE_PAGES
	to decide between SPVW_PURE and SPVW_MIXED.
	* Makefile.devel (build-porting32-gcc-typecodes-spvw_pure_pages,
	build-porting32-cc-typecodes-spvw_pure_pages,
	build-porting64-gcc-typecodes-spvw_pure_pages,
	build-porting64-cc-typecodes-spvw_pure_pages): New targets.
	(build-porting32-gcc-typecodes-spvw_mixed_pages): Renamed from
	build-porting32-gcc-typecodes-spvw_pages.
	(build-porting32-cc-typecodes-spvw_mixed_pages): Renamed from
	build-porting32-cc-typecodes-spvw_pages.
	(build-porting64-gcc-typecodes-spvw_mixed_pages): Renamed from
	build-porting64-gcc-typecodes-spvw_pages.
	(build-porting64-cc-typecodes-spvw_mixed_pages): Renamed from
	build-porting64-cc-typecodes-spvw_pages.

2017-05-26  Bruno Haible  <bruno@clisp.org>

	Optimize unneeded code when SIGCLD is not defined.
	* spvw_sigcld.d (begin_want_sigcld, end_want_sigcld): Do nothing if
	SIGCLD is not defined.

2017-05-26  Bruno Haible  <bruno@clisp.org>

	Reinstall the old GC from clisp-2.47.
	This should provide a reference point when hunting down GC bugs.
	* lispbibl.d: Document OLD_GC instead of NO_MULTITHREAD_GC.
	Verify OLD_GC and MULTITHREAD are exclusive.
	* spvw_allocate_old.d: New file, from clisp-2.47 with non-algorithmic
	updates from spvw_allocate.d.
	* spvw_circ_old.d: New file, from clisp-2.47.
	* spvw_fault_old.d: New file, from clisp-2.47 with non-algorithmic
	updates from spvw_fault.d.
	* spvw_genera1_old.d: New file, from clisp-2.47 with non-algorithmic