@@ -351,7 +351,7 @@
 #define update_STACKs()                                                 \
   for_all_STACKs(while (!eq(*objptr,nullobj)) { /* until STACK is finished: */ \
     if (as_oint(*objptr) & wbit(frame_bit_o)) { /* here starts a frame? */ \
-      if ((as_oint(*objptr) & wbit(skip2_bit_o)) == 0) /* without skip2-Bit? */ \
+      if (framecode(*objptr) < skip2_limit_t) /* below skip2-limit? */  \
         objptr skipSTACKop 2;                /* yes -> advance by 2 */  \
       else                                                              \
         objptr skipSTACKop 1;                 /* no -> advance by 1 */  \
